--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
 					<archive>
 						<manifest>
 							<addClasspath>true</addClasspath>
-							<mainClass>com.ie.naukri.migration.DataCleanup.CSVReader</mainClass>
+							<mainClass>com.ie.naukri.migration.DataCleanup.DataCleanup</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
